--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Github Actions</title>
 </head>
 <body>
-    <h1>This is our Production</h1>
+    <h1>This is our Staging</h1>
     <p>This is our new feature</p>
 </body>
 </html>
