penambahan fitur staging

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>This is our Staging</h1>
     <p>This is our new feature</p>
     <p>Penambahan menu staging</p>
+    <p>Penambahan menu staging 2</p>
 </body>
 </html>
